[gd_scene load_steps=18 format=3 uid="uid://6enoj0jns83w"]

[ext_resource type="Script" uid="uid://dkn2wqjxg7p3c" path="res://scrips/Sword.gd" id="1_1yp6w"]
[ext_resource type="Script" uid="uid://dvdjfekbl7o0m" path="res://scenes/embedded_area.gd" id="2_3oqan"]
[ext_resource type="Texture2D" uid="uid://qcf38c7xi1x7" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Sword/22-Sword Spinning/Sword Spinning 01.png" id="2_fnw8x"]
[ext_resource type="Texture2D" uid="uid://cddrjtltj855a" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Sword/23-Sword Embedded/Sword Embedded 01.png" id="2_xccsb"]
[ext_resource type="Texture2D" uid="uid://drpgf4yfo6v85" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Sword/22-Sword Spinning/Sword Spinning 02.png" id="3_cp3m4"]
[ext_resource type="Texture2D" uid="uid://dtentgk8xnh1d" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Sword/23-Sword Embedded/Sword Embedded 02.png" id="3_p4x8v"]
[ext_resource type="Script" uid="uid://dy8dli2p6g8fx" path="res://scenes/area_2d.gd" id="3_sjcpw"]
[ext_resource type="Texture2D" uid="uid://d2qma260d314y" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Sword/23-Sword Embedded/Sword Embedded 03.png" id="4_3oqan"]
[ext_resource type="Texture2D" uid="uid://ca5hdmot62nlo" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Sword/22-Sword Spinning/Sword Spinning 03.png" id="4_ml5hy"]
[ext_resource type="Texture2D" uid="uid://nahpdsr50t4q" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Sword/23-Sword Embedded/Sword Embedded 04.png" id="5_sjcpw"]
[ext_resource type="Texture2D" uid="uid://bd57edqqg7smh" path="res://sprites/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Sword/22-Sword Spinning/Sword Spinning 04.png" id="5_xccsb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xccsb"]
size = Vector2(9, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k4l2t"]
size = Vector2(21, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_12tba"]
size = Vector2(9, 7)

[sub_resource type="SpriteFrames" id="SpriteFrames_u2t1x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_xccsb")
}, {
"duration": 1.0,
"texture": ExtResource("3_p4x8v")
}, {
"duration": 1.0,
"texture": ExtResource("4_3oqan")
}, {
"duration": 1.0,
"texture": ExtResource("5_sjcpw")
}],
"loop": true,
"name": &"Embedded",
"speed": 10.0
}, {
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_fnw8x")
}, {
"duration": 1.0,
"texture": ExtResource("3_cp3m4")
}, {
"duration": 1.0,
"texture": ExtResource("4_ml5hy")
}, {
"duration": 1.0,
"texture": ExtResource("5_xccsb")
}],
"loop": true,
"name": &"throw",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3oqan"]
size = Vector2(24, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sjcpw"]
size = Vector2(10, 20)

[node name="Sword" type="RigidBody2D"]
z_index = -1
collision_layer = 8
mass = 10.68
linear_velocity = Vector2(1000, 0)
script = ExtResource("1_1yp6w")

[node name="Embedded_Area" type="Area2D" parent="."]
position = Vector2(1, 0)
collision_layer = 8
collision_mask = 7
script = ExtResource("2_3oqan")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Embedded_Area"]
position = Vector2(-1.5, 0.5)
shape = SubResource("RectangleShape2D_xccsb")

[node name="Throwing_area" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 7
script = ExtResource("3_sjcpw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Throwing_area"]
shape = SubResource("RectangleShape2D_k4l2t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_12tba")
debug_color = Color(0, 0.633775, 0.436644, 0.42)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, 0)
sprite_frames = SubResource("SpriteFrames_u2t1x")
animation = &"Embedded"
autoplay = "throw"

[node name="SIDE_EMBEDDEN" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="SIDE_EMBEDDEN"]
shape = SubResource("RectangleShape2D_3oqan")
debug_color = Color(0.665855, 0.340281, 0.954679, 0.42)

[node name="Animation_Stop" type="Timer" parent="."]
wait_time = 0.663
one_shot = true

[node name="DOWN_EMBDDEN" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DOWN_EMBDDEN"]
shape = SubResource("RectangleShape2D_sjcpw")
debug_color = Color(0.617677, 0.526908, 0.27405, 0.42)

[connection signal="body_entered" from="." to="." method="body_entered"]
[connection signal="body_exited" from="." to="." method="body_exited"]
[connection signal="body_shape_entered" from="." to="." method="body_entered"]
[connection signal="body_shape_exited" from="." to="." method="_on_body_shape_exited"]
[connection signal="body_entered" from="Embedded_Area" to="." method="body_entered"]
[connection signal="body_exited" from="Embedded_Area" to="." method="body_exited"]
[connection signal="area_shape_entered" from="Throwing_area" to="." method="body_entered"]
[connection signal="area_shape_exited" from="Throwing_area" to="." method="body_exited"]
[connection signal="body_entered" from="Throwing_area" to="." method="body_entered"]
[connection signal="body_exited" from="Throwing_area" to="." method="body_exited"]
[connection signal="body_entered" from="SIDE_EMBEDDEN" to="." method="_on_side_embedden_body_entered"]
[connection signal="body_entered" from="SIDE_EMBEDDEN" to="." method="_on_testing_body_entered"]
[connection signal="timeout" from="Animation_Stop" to="." method="stop_animation"]
[connection signal="body_entered" from="DOWN_EMBDDEN" to="." method="_on_down_embdden_body_entered"]
[connection signal="body_exited" from="DOWN_EMBDDEN" to="." method="_on_down_embdden_body_exited"]
